Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleMinusWithBadCharacters-54.calc
a .0e-2%3 b 1.e-2%5 c 2.3e-3%1 d 34.5e-4%5 e 6.78e-7%3 f 99.99e-5%6 g 3e-9%3 h 76e-4%5
